--- a/nodes/senseMate/Makefile
+++ b/nodes/senseMate/Makefile
@@ -19,8 +19,11 @@ DEVELHELP ?= 1
 # This board requires a start sleep to actually catch the printed output
 USEMODULE += ztimer_sec
 
-# include bluetooth stack
+# Include bluetooth stack
 include ../ble/ble.inc.mk
+
+# Include other packages here e.g.
+# include ../other_package/other_package.inc.mk
 
 # We use shell in this example
 USEMODULE += shell
