--- a/nodes/hardware/GateMate/Makefile
+++ b/nodes/hardware/GateMate/Makefile
@@ -19,16 +19,15 @@ DEVELHELP ?= 1
 # This board requires a start sleep to actually catch the printed output
 USEMODULE += ztimer_sec
 
-# Include bluetooth stack
-include ../../ble/ble.inc.mk
-
-# Include other packages here e.g.
-# include ../../other_package/other_package.inc.mk
-
 # We use shell in this example
 USEMODULE += shell
 
+# Use our custom mate_ble module
+USEMODULE += mate_ble
+
 # Change this to 0 show compiler invocation lines by default:
 QUIET ?= 1
+
+EXTERNAL_MODULE_DIRS += ../../
 
 include $(RIOTBASE)/Makefile.include
