--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "nodes/RIOT"]
 	path = nodes/RIOT
-	url = https://github.com/RIOT-OS/RIOT.git
+	url = https://github.com/smartuni/riot-fork-po-2025
