--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@ Desktop.ini
 # VSCode
 .vscode/
 .history/
-
+compile_commands.json
 # JetBrains (CLion, IntelliJ, PyCharm…)
 .idea/
 *.iml
@@ -69,7 +69,8 @@ pip-log.txt
 build/
 out/
 *.map
-
+bin/
+.cache/
 # PlatformIO
 .pio/
 .pioenvs/
