lorawan module finished for prototype show case
Co-authored-by: JannikSchoen <JannikSchoen@users.noreply.github.com>

--- a/nodes/apps/lorawan-test/Makefile
+++ b/nodes/apps/lorawan-test/Makefile
@@ -1,11 +1,15 @@
-# name of your application
-APPLICATION = senseMate
+# This has to be the absolute path to the RIOT base directory:
+APPLICATION = lorawan_test
+PROJECT_BASE ?= $(CURDIR)/../..
+RIOTBASE ?= $(PROJECT_BASE)/RIOT
+
+EXTERNAL_MODULE_DIRS += $(PROJECT_BASE)/custom-modules
 
 # If no BOARD is found in the environment, use this default:
-BOARD ?= feather-nrf52840-sense
+BOARD ?= adafruit-feather-nrf52840-sense
 
-# This has to be the absolute path to the RIOT base directory:
-RIOTBASE ?= $(CURDIR)/../../RIOT
+# Eigene Module aktivieren
+USEMODULE += cose-service
 
 # Comment this out to disable code in RIOT that does safety checking
 # which is not needed in a production environment but helps in the
@@ -14,23 +18,20 @@ DEVELHELP ?= 1
 
 # Some workarounds are needed in order to get the tutorial running on
 # some computers.
--include ../lab_workarounds.mk
+-include ../../lab_workarounds.mk
 
 # This board requires a start sleep to actually catch the printed output
+USEMODULE += xtimer
 USEMODULE += ztimer_sec
+USEMODULE += benchmark
+USEPKG += tinycbor
+USEPKG += libcose
+USEMODULE += libcose_crypt_monocypher
 
-# We use shell in this example
-USEMODULE += shell
+CFLAGS += -DTHREAD_STACKSIZE_MAIN=4096
 
-# Use our custom mate_ble module
-USEMODULE += mate_ble
-
-#Use our custom LoRaWAN Module
-USEMODULE += mate_lorawan
 
 # Change this to 0 show compiler invocation lines by default:
 QUIET ?= 1
-
-EXTERNAL_MODULE_DIRS += ../../
 
 include $(RIOTBASE)/Makefile.include
