--- a/nodes/custom-modules/mate_lorawan/Makefile.include
+++ b/nodes/custom-modules/mate_lorawan/Makefile.include
@@ -2,6 +2,9 @@
 USEMODULE_INCLUDES_mate_lorawan := $(LAST_MAKEFILEDIR)/include
 USEMODULE_INCLUDES += $(USEMODULE_INCLUDES_mate_lorawan)
 
+CFLAGS += -DCONFIG_LORAMAC_APP_EUI_DEFAULT=\"0000000000000000\"
+CFLAGS += -DCONFIG_LORAMAC_DEV_EUI_DEFAULT=\"70B3D57ED0070C99\"
+CFLAGS += -DCONFIG_LORAMAC_APP_KEY_DEFAULT=\"D5586D89F62687A027BD6D3273256FCB\"
 
 # Indicate how we connected the LoRa radio to the microcontroller
 CFLAGS += -DSX127X_PARAM_SPI_NSS=GPIO_PIN\(0,27\) #B
