--- a/nodes/hardware/SenseMate/logic/Makefile
+++ b/nodes/hardware/SenseMate/logic/Makefile
@@ -2,10 +2,10 @@
 APPLICATION = displayTest
 
 # If no BOARD is found in the environment, use this default:
-BOARD ?= feather-nrf52840-sense
+BOARD ?= adafruit-feather-nrf52840-sense
 
 # This has to be the absolute path to the RIOT base directory:
-RIOTBASE ?= $(CURDIR)/../RIOT
+RIOTBASE ?= $(CURDIR)/../../../RIOT
 
 # Comment this out to disable code in RIOT that does safety checking
 # which is not needed in a production environment but helps in the
