--- a/nodes/custom-modules/mate_lorawan/Makefile.include
+++ b/nodes/custom-modules/mate_lorawan/Makefile.include
@@ -2,6 +2,9 @@
 USEMODULE_INCLUDES_mate_lorawan := $(LAST_MAKEFILEDIR)/include
 USEMODULE_INCLUDES += $(USEMODULE_INCLUDES_mate_lorawan)
 
+# We want to use OTAA join procedure
+CFLAGS += -DCONFIG_LORAMAC_DEFAULT_JOIN_PROCEDURE_OTAA
+
 CFLAGS += -DCONFIG_LORAMAC_APP_EUI_DEFAULT=\"0000000000000000\"
 CFLAGS += -DCONFIG_LORAMAC_DEV_EUI_DEFAULT=\"70B3D57ED0070C99\"
 CFLAGS += -DCONFIG_LORAMAC_APP_KEY_DEFAULT=\"D5586D89F62687A027BD6D3273256FCB\"
