cbor to table working

--- a/nodes/apps/cbor-test/Makefile
+++ b/nodes/apps/cbor-test/Makefile
@@ -33,4 +33,6 @@ USEMODULE += shell
 # Change this to 0 show compiler invocation lines by default:
 QUIET ?= 1
 
+CFLAGS += -DDEBUG_ASSERT_VERBOSE
+
 include $(RIOTBASE)/Makefile.include
