working with signal strength but not cbor type

--- a/nodes/custom-modules/mate_ble/Makefile.include
+++ b/nodes/custom-modules/mate_ble/Makefile.include
@@ -18,3 +18,5 @@ CFLAGS += -DMYNEWT_VAL_BLE_L2CAP_COC_MPS=MYNEWT_VAL_BLE_LL_MAX_PKT_SIZE
 # we need to cater for a 48 byte overhead per block.
 CFLAGS += -DMYNEWT_VAL_MSYS_1_BLOCK_COUNT=$(MSYS_CNT)
 CFLAGS += -DMYNEWT_VAL_MSYS_1_BLOCK_SIZE="(MYNEWT_VAL_BLE_L2CAP_COC_MPS + 48)"
+
+CFLAGS += -DBLE_ADVERTISE_NAME=\"$(APPLICATION)\"
