Fixes after test

--- a/nodes/hardware/GateMate/logic/Makefile
+++ b/nodes/hardware/GateMate/logic/Makefile
@@ -42,5 +42,5 @@ PREFLASH_DELAY=10
 
 # Change this to 0 show compiler invocation lines by default:
 QUIET ?= 1
-
+CFLAGS += -DDEBUG_ASSERT_VERBOSE
 include $(RIOTBASE)/Makefile.include
