receive loop ready for mergeparty

--- a/nodes/custom-modules/mate_ble/Makefile.dep
+++ b/nodes/custom-modules/mate_ble/Makefile.dep
@@ -13,6 +13,7 @@ USEMODULE += nimble_addr
 USEMODULE += bluetil_ad
 
 USEMODULE += tables
+USEMODULE += posix_semaphore
 
 # Add the tinycbor package
 USEPKG += tinycbor
