adding key distribution for cose service

--- a/nodes/custom-modules/cose-service/Makefile.include
+++ b/nodes/custom-modules/cose-service/Makefile.include
@@ -1,2 +1,4 @@
 USEMODULE_INCLUDES_cose_service := $(LAST_MAKEFILEDIR)/include
 USEMODULE_INCLUDES += $(USEMODULE_INCLUDES_cose_service)
+
+CFLAGS += -DTHREAD_STACKSIZE_MAIN=4096
