fixes for SenseGate

--- a/nodes/hardware/GateMate/logic/Makefile
+++ b/nodes/hardware/GateMate/logic/Makefile
@@ -28,7 +28,7 @@ USEMODULE += mate_lorawan
 USEMODULE += mate_ble
 
 
-CFLAGS += -DEVENT_THREAD_HIGHEST_STACKSIZE=1024
+CFLAGS += -DEVENT_THREAD_HIGHEST_STACKSIZE=2*1024
 
 # Comment this out to disable code in RIOT that does safety checking
 # which is not needed in a production environment but helps in the
