--- a/nodes/hardware/GateMate/logic/Makefile
+++ b/nodes/hardware/GateMate/logic/Makefile
@@ -38,7 +38,9 @@ DEVELHELP ?= 1
 
 # Some workarounds are needed in order to get the tutorial running on
 # some computers.
-PREFLASH_DELAY=10
+PREFLASH_DELAY=4
+
+BUILD_IN_DOCKER ?= 1
 
 
 # Change this to 0 show compiler invocation lines by default:
