reset the default stacksize and configure nimBLE correctly

--- a/nodes/custom-modules/mate_ble/Makefile.include
+++ b/nodes/custom-modules/mate_ble/Makefile.include
@@ -20,3 +20,5 @@ CFLAGS += -DMYNEWT_VAL_MSYS_1_BLOCK_COUNT=$(MSYS_CNT)
 CFLAGS += -DMYNEWT_VAL_MSYS_1_BLOCK_SIZE="(MYNEWT_VAL_BLE_L2CAP_COC_MPS + 48)"
 
 CFLAGS += -DBLE_ADVERTISE_NAME=\"$(APPLICATION)\"
+
+CFLAGS += -DNIMBLE_HOST_STACKSIZE=4096
