--- a/nodes/custom-modules/key-distro/Makefile.include
+++ b/nodes/custom-modules/key-distro/Makefile.include
@@ -5,7 +5,7 @@ ifneq (,$(RIOT_CONFIG_USE_TEST_KEYS))
   CFLAGS += -DTEST_KEYS
   $(info test_Keys defined)
 else
-   ifneq (,$(RIOT_CONFIG_DEVICE_ID))
-       CFLAGS += -DDEVICE_ID=$(RIOT_CONFIG_DEVICE_ID)
+   ifneq (,$(RIOT_CONFIG_KEY_ID))
+       CFLAGS += -DKEY_ID=$(RIOT_CONFIG_KEY_ID)
    endif
 endif
