implement correct device ID and type handling

--- a/nodes/hardware/GateMate/logic/Makefile
+++ b/nodes/hardware/GateMate/logic/Makefile
@@ -11,8 +11,8 @@ EXTERNAL_MODULE_DIRS += $(PROJECT_BASE)/custom-modules
 
 
 RIOT_CONFIG_DEVICE_ID ?= 1
+DEVICE_TYPE := 0
 $(info Using device ID: $(RIOT_CONFIG_DEVICE_ID))
-
 
 USEMODULE += periph_gpio
 USEMODULE += periph_gpio_irq
