--- a/nodes/custom-modules/mate_lorawan/Makefile.include
+++ b/nodes/custom-modules/mate_lorawan/Makefile.include
@@ -5,10 +5,6 @@ USEMODULE_INCLUDES += $(USEMODULE_INCLUDES_mate_lorawan)
 # We want to use OTAA join procedure
 CFLAGS += -DCONFIG_LORAMAC_DEFAULT_JOIN_PROCEDURE_OTAA
 
-CFLAGS += -DCONFIG_LORAMAC_APP_EUI_DEFAULT=\"0000000000000000\"
-CFLAGS += -DCONFIG_LORAMAC_DEV_EUI_DEFAULT=\"70B3D57ED0070C99\"
-CFLAGS += -DCONFIG_LORAMAC_APP_KEY_DEFAULT=\"D5586D89F62687A027BD6D3273256FCB\"
-
 # Indicate how we connected the LoRa radio to the microcontroller
 CFLAGS += -DSX127X_PARAM_SPI_NSS=GPIO_PIN\(0,27\) #B
 CFLAGS += -DSX127X_PARAM_RESET=GPIO_PIN\(0,26\) #C
@@ -19,3 +15,5 @@ CFLAGS += -DSX127X_PARAM_DIO3=GPIO_UNDEF
 CFLAGS += -DSX127X_PARAM_DIO4=GPIO_UNDEF
 CFLAGS += -DSX127X_PARAM_DIO5=GPIO_UNDEF
 CFLAGS += -DSX127X_PARAM_PASELECT=SX127X_PA_BOOST
+
+$(info $(CFLAGS))
