--- a/nodes/custom-modules/mate_lorawan/Makefile.dep
+++ b/nodes/custom-modules/mate_lorawan/Makefile.dep
@@ -23,6 +23,8 @@ USEMODULE += benchmark
 USEMODULE += tables
 USEMODULE += event
 USEMODULE += event_timeout
+USEMODULE += event_thread_highest
+USEMODULE += event_thread
 USEMODULE += od
 #USEPKG += libcose
 #USEMODULE += libcose_crypt_monocypher
