added different returns for the tables

--- a/nodes/apps/tables-test/Makefile
+++ b/nodes/apps/tables-test/Makefile
@@ -2,8 +2,7 @@
 APPLICATION = tables-test-getter-setter
 
 # If no BOARD is found in the environment, use this default:
-BOARD ?= feather-nrf52840-sense
-
+BOARD ?= adafruit-feather-nrf52840-sense
 # This has to be the absolute path to the RIOT base directory:
 RIOTBASE ?= $(CURDIR)/../../RIOT
 PROJECT_BASE ?= $(CURDIR)/../../
@@ -13,7 +12,6 @@ EXTERNAL_MODULE_DIRS += $(PROJECT_BASE)/custom-modules
 # which is not needed in a production environment but helps in the
 # development process:
 DEVELHELP ?= 1
-
 # Some workarounds are needed in order to get the tutorial running on
 # some computers.
 -include ../../lab_workarounds.mk
