nodes/hardware/GateMate/logic/Makefile: specify LoRaWAN timimg workarounds, allow overwriting PREFLASH_DELAY

--- a/nodes/hardware/GateMate/logic/Makefile
+++ b/nodes/hardware/GateMate/logic/Makefile
@@ -44,7 +44,13 @@ DEVELHELP ?= 1
 
 # Some workarounds are needed in order to get the tutorial running on
 # some computers.
-PREFLASH_DELAY=4
+PREFLASH_DELAY ?= 4
+
+
+CFLAGS += -DCONFIG_LORAMAC_DEFAULT_RX1_DELAY=990
+CFLAGS += -DCONFIG_LORAMAC_DEFAULT_MIN_RX_SYMBOLS=20
+CFLAGS += -DNIMBLE_CONTROLLER_PRIO=THREAD_PRIORITY_MAIN-2
+
 
 BUILD_IN_DOCKER ?= 1
 
